a few bits of writing on the plane

--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -6,7 +6,7 @@ sources such as files), accessing that data in a memory-efficient fashion, and
 then processing that data into either a resultant set of quantitative data or a
 visualization.
 
-The mechanisms by which `yt` can select data are typically spatial in nature,
+Selections in `yt` are usually spatial in nature,
 although several non-spatial mechanisms focused on queries can be utilized as
 well.  These objects which conduct selection are selectors, and are designed to
 provide as small of an API as possible, to enable ease of development and
@@ -48,5 +48,18 @@ selecting individual points.  There is no hierarchical data selection conducted
 in this system, as we do not yet allow for re-ordering of data on disk or
 in-memory which would facilitate hierarchical selection through the use of
 operations such as morton indices.
+
+Given these set of hierarchical selection methods, all of which are designed to provide opportunities for early-termination, each *geometric* selector object is required to implement a small set of methods to expose its functionality to the hierarchical selection process.  Duplicative functions often result from attempts to avoid expensive calculations that take into account boundry conditions such as periodicity and reflectivity unless necessary.  Additionally, by providing some routines as options, we can in some instances specialize them for the specific geometric operation.
+
+ * `select_cell(cell_center, cell_width)`: this function, which is somewhat degenerate with `select_bbox`, returns whether a given "cell," defined by its center and its width along each dimension, is included within the selection.  In situations where the cells are spaced logarithmically, rather than linearly, this may produce slightly reduced accuracy for near-misses and glancing-selections.
+ * `select_point(position)`: this function returns whether or not a point of zero-extent is included within the selection.  This has some degeneracy with `select_sphere`.
+ * `select_sphere(position, radius)`: This is equivalent to the `select_point` function, except that any point within the specified radius is included within the selector object.
+ * `select_bbox(lower_left, upper_right)`: Determine overlap with an axis-aligned bounding box.  Particularly for hierarchical selection methods, determining whether or not a bounding box overlaps with a geometric selector can lead to early-termination of some selection operations.  
+ * `select_bbox_edge(lower_left, upper_right)`: This is a special-case of the bounding box routine that provides information as to whether or not the *entire* bounding box is included or just a *partial* portion of the bounding box.
+
+To cover:
+
+ * boolean operators
+ *
 
 **add bitmap index stuff here**
