--- a/content/98.acknowledgments.md
+++ b/content/98.acknowledgments.md
@@ -1,10 +1,5 @@
 ## Acknowledgments
 
-The authors of this paper would like to extend their deepest gratitude to the
-many, many individual and institutions that have contributed, directly or
-indirectly, to the growth of both `yt` and the `yt` community.
+The authors of this paper would like to extend their deepest gratitude to the many, many individual and institutions that have contributed, directly or indirectly, to the growth of both `yt` and the `yt` community.
 
-We particularly thank KIPAC and SLAC at Stanford, the University of California
-at San Diego and Santa Cruz, the High-Performance Astro Computing Center,
-Columbia University, the University of Illinois, University of Colorado at
-Boulder, University of Edinburgh, the scientific python community, NumFOCUS, 
+We particularly thank KIPAC and SLAC at Stanford, the University of California at San Diego and Santa Cruz, the High-Performance Astro Computing Center, Columbia University, the University of Illinois, University of Colorado at Boulder, University of Edinburgh, the scientific python community, NumFOCUS, 
