--- a/content/02.authorship_policy.md
+++ b/content/02.authorship_policy.md
@@ -1,14 +1,10 @@
 # Authorship Policy
 
-We note that the author list for this paper is, by design, extensive.  We have
-separated the authors into those that contributed to the text (whose names are
-ordered **somehow TBD**) and those that are members of the `yt` community.
-The authors from each group have been indicated in the respective author
-affiliations.
+We note that the author list for this paper is, by design, extensive.
+We have separated the authors into those that contributed to the text (whose names are ordered **somehow TBD**) and those that are members of the `yt` community.
+The authors from each group have been indicated in the respective author affiliations.
 
-This paper was developed collaboratively, using the Manubot
-[@url:https://github.com/greenelab/manubot] system for collaborating on and
-reviewing contributed text.
+This paper was developed collaboratively, using the Manubot [@url:https://github.com/greenelab/manubot] system for collaborating on and reviewing contributed text.
 
 > 
 > To add yourself to the author list, please follow the instructions in our
