--- a/content/05.introduction.md
+++ b/content/05.introduction.md
@@ -1,53 +1,24 @@
 ## Introduction {#sec:introduction}
 
-The process of transforming data into understanding constitutes the vast
-majority of time, energy, and intellectual effort spent during scientific
-inquiry.  This is true across domains, whether data is the product of a
-computational simulation, a telescope observation, the synthesis of sensors
-distributed across the Earth, or a collection of images of the human brain.
-Data, by themselves, do not reflect an understanding of the Universe or its
-underlying physical properties; rather, they are recordings, or measurements,
-of the state of systems as observed.  Even for computational simulations, such
-as simulations of star formation in the galaxy, this is true: these simulations
-encode information about a discretization of a model, rather than the model
-itself.
+The process of transforming data into understanding constitutes the vast majority of time, energy, and intellectual effort spent during scientific inquiry.
+This is true across domains, whether data is the product of a computational simulation, a telescope observation, the synthesis of sensors distributed across the Earth, or a collection of images of the human brain.
+Data, by themselves, do not reflect an understanding of the Universe or its underlying physical properties; rather, they are recordings, or measurements, of the state of systems as observed.
+Even for computational simulations, such as simulations of star formation in the galaxy, this is true: these simulations encode information about a discretization of a model, rather than the model itself.
 
-Bridging the gap between this discretization and the physical understanding
-requires accessing data, manipulating and interrogating this data, and then
-applying to this data a sense of understanding.  Somehow, bits stored on a disk
-must become, in our minds, a galaxy undergoing a starburst.
+Bridging the gap between this discretization and the physical understanding requires accessing data, manipulating and interrogating this data, and then applying to this data a sense of understanding.
+Somehow, bits stored on a disk must become, in our minds, a galaxy undergoing a starburst.
 
-This process is both mediated and impeded by computational tools.  When those
-tools align with our mental model of how data exists, they can allow us to work
-more efficiently, asking questions of data and building sophisticated
-scientific inquiry.  However, when they do not, they can cause frustration,
-delays, and most worryingly, incorrect or misinterpreted results.  When viewing
-this from the perspective of the landscape of inquiry, the most startling
-realization is that the questions a computational tool enables
-individuals to ask shapes the questions they think to ask.
+This process is both mediated and impeded by computational tools.
+When those tools align with our mental model of how data exists, they can allow us to work more efficiently, asking questions of data and building sophisticated scientific inquiry.
+However, when they do not, they can cause frustration, delays, and most worryingly, incorrect or misinterpreted results.
+When viewing this from the perspective of the landscape of inquiry, the most startling realization is that the questions a computational tool enables individuals to ask shapes the questions they think to ask.
 
 In [@doi:10.1088/0067-0049/192/1/9], the analysis platform `yt` was described.
-At the time, `yt` was focused on analyzing and visualizing the output of
-grid-based adaptive mesh refinement hydrodynamic simulations; while these were
-used to study many different physical phenomena, they all were laid out in
-roughly the same way, in rectilinear meshes of data.  In this paper, we present
-the current version of `yt`, which enables identical scripts to analyze and
-visualize data stored as rectilinear grids as before, but additionally particle
-or discrete data, octree-based data, and data stored as unstructured meshes.
-This has been the result of a large-scale effort to rewrite the underlying
-machinery within `yt` for accessing data, indexing that data, and providing it
-in efficient ways to higher-level routines, as discussed in Section Something.
-While this was underway, `yt` has also been considerably reinstrumented with
-[metadata-aware array infrastructure](#sec:units), the [volume
-rendering infrastructure](#sec:vr) has been rewritten to be more user-friendly and
-capable, and support for [non-Cartesian geometries](#sec:noncartesian) has
-been added.
+At the time, `yt` was focused on analyzing and visualizing the output of grid-based adaptive mesh refinement hydrodynamic simulations; while these were used to study many different physical phenomena, they all were laid out in roughly the same way, in rectilinear meshes of data.
+In this paper, we present the current version of `yt`, which enables identical scripts to analyze and visualize data stored as rectilinear grids as before, but additionally particle or discrete data, octree-based data, and data stored as unstructured meshes.
+This has been the result of a large-scale effort to rewrite the underlying machinery within `yt` for accessing data, indexing that data, and providing it in efficient ways to higher-level routines, as discussed in Section Something.
+While this was underway, `yt` has also been considerably reinstrumented with [metadata-aware array infrastructure](#sec:units), the [volume rendering infrastructure](#sec:vr) has been rewritten to be more user-friendly and capable, and support for [non-Cartesian geometries](#sec:noncartesian) has been added.
 
-The single biggest change to `yt` since that paper was published has not been
-technical in nature.  In the intervening years, a directed and intense
-community-building effort has resulted in the contributions from over a hundred
-different individuals, many of them early-stage researchers, and a [thriving
-community of both users and developers](#sec:community).  This is
-the crowning achievement of development, as we have attempted to build `yt`
-into a tool that enables inquiry from a technical level as well as fosters a
-supportive, friendly community of individuals engaged in self-directed inquiry.
+The single biggest change to `yt` since that paper was published has not been technical in nature.
+In the intervening years, a directed and intense community-building effort has resulted in the contributions from over a hundred different individuals, many of them early-stage researchers, and a [thriving community of both users and developers](#sec:community).
+This is the crowning achievement of development, as we have attempted to build `yt` into a tool that enables inquiry from a technical level as well as fosters a supportive, friendly community of individuals engaged in self-directed inquiry.
