switch to semantic linebreaks for this branch

--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -1,55 +1,34 @@
 ## Data Objects {#sec:data_objects}
 
-The basic principles by which `yt` operates are built on the notion of
-selecting data (through coarse and subsequent fine-grained indexing of data
-sources such as files), accessing that data in a memory-efficient fashion, and
-then processing that data into either a resultant set of quantitative data or a
-visualization.
+The basic principles by which `yt` operates are built on the notion of selecting data (through coarse and subsequent fine-grained indexing of data sources such as files), accessing that data in a memory-efficient fashion, and then processing that data into either a resultant set of quantitative data or a visualization.
 
-Selections in `yt` are usually spatial in nature,
-although several non-spatial mechanisms focused on queries can be utilized as
-well.  These objects which conduct selection are selectors, and are designed to
-provide as small of an API as possible, to enable ease of development and
-deployment of new selectors.
+Selections in `yt` are usually spatial in nature, although several non-spatial mechanisms focused on queries can be utilized as well.
+These objects which conduct selection are selectors, and are designed to provide as small of an API as possible, to enable ease of development and deployment of new selectors.
 
-Selectors require defining several functions, with the option of defining
-additional functions for optimization, that return true or false whether a
-given point is or is not included in the selected region.  These functions
-include selection of a rectilinear grid (or any point within that grid),
-selection of a point with zero extent and selection of a point with a non-zero
-spherical radius.
+Selectors require defining several functions, with the option of defining additional functions for optimization, that return true or false whether a given point is or is not included in the selected region.
+These functions include selection of a rectilinear grid (or any point within that grid), selection of a point with zero extent and selection of a point with a non-zero spherical radius.
 
-The base selector object utilizes these routines during a selection operation
-to maximize the amount of code reused between particle, patch, and octree
-selection of data.  These three types of data are selected through specific
-routines designed to minimize the number of times that the selection function
-must be called, as they can be quite expensive.
+The base selector object utilizes these routines during a selection operation to maximize the amount of code reused between particle, patch, and octree selection of data.
+These three types of data are selected through specific routines designed to minimize the number of times that the selection function must be called, as they can be quite expensive.
 
-Selecting data from a grid is a two-step process.  The first step is
-identifying which grids intersect a given data selector; this is done through a
-sequence of bounding box intersection checks.  Within a given grid, the cells
-which are intersected are identified.  This results in the selection routine
-being called once for each grid object in the simulation and once for each cell
-located within an intersecting grid.  This can be conducted hierarchically, but
-due to implementation details around how the grid index is stored this is not
-yet cost effective.
 
-Selecting data from an octree-organized dataset utilizes a recursive scheme
-that selects individual oct nodes, then for each cell within that oct,
-determining which cells must be selected or child nodes recursed into.  This
-system is designed to allow for having leaf nodes of varying cells-per-side,
-for instance 1, 2, 4, 8, etc.  However, the number of nodes is fixed at 8, with
-subdivision always occurring at the midplane.
+Selecting data from a grid is a two-step process.
+The first step is identifying which grids intersect a given data selector; this is done through a sequence of bounding box intersection checks.
+Within a given grid, the cells which are intersected are identified.
+This results in the selection routine being called once for each grid object in the simulation and once for each cell located within an intersecting grid.
+This can be conducted hierarchically, but due to implementation details around how the grid index is stored this is not yet cost effective.
 
-The final mechanism by which data is selected is for discrete data points,
-typically particles in astrophysical simulations.  At present, this is done
-by first identifying which data files intersect with a given selector, then
-selecting individual points.  There is no hierarchical data selection conducted
-in this system, as we do not yet allow for re-ordering of data on disk or
-in-memory which would facilitate hierarchical selection through the use of
-operations such as morton indices.
+Selecting data from an octree-organized dataset utilizes a recursive scheme that selects individual oct nodes, then for each cell within that oct, determining which cells must be selected or child nodes recursed into.
+This system is designed to allow for having leaf nodes of varying cells-per-side, for instance 1, 2, 4, 8, etc.
+However, the number of nodes is fixed at 8, with subdivision always occurring at the midplane.
 
-Given these set of hierarchical selection methods, all of which are designed to provide opportunities for early-termination, each *geometric* selector object is required to implement a small set of methods to expose its functionality to the hierarchical selection process.  Duplicative functions often result from attempts to avoid expensive calculations that take into account boundry conditions such as periodicity and reflectivity unless necessary.  Additionally, by providing some routines as options, we can in some instances specialize them for the specific geometric operation.
+The final mechanism by which data is selected is for discrete data points, typically particles in astrophysical simulations.
+At present, this is done by first identifying which data files intersect with a given selector, then selecting individual points.
+There is no hierarchical data selection conducted in this system, as we do not yet allow for re-ordering of data on disk or in-memory which would facilitate hierarchical selection through the use of operations such as morton indices.
+
+Given these set of hierarchical selection methods, all of which are designed to provide opportunities for early-termination, each *geometric* selector object is required to implement a small set of methods to expose its functionality to the hierarchical selection process.
+Duplicative functions often result from attempts to avoid expensive calculations that take into account boundry conditions such as periodicity and reflectivity unless necessary.
+Additionally, by providing some routines as options, we can in some instances specialize them for the specific geometric operation.
 
  * `select_cell(cell_center, cell_width)`: this function, which is somewhat degenerate with `select_bbox`, returns whether a given "cell," defined by its center and its width along each dimension, is included within the selection.  In situations where the cells are spaced logarithmically, rather than linearly, this may produce slightly reduced accuracy for near-misses and glancing-selections.
  * `select_point(position)`: this function returns whether or not a point of zero-extent is included within the selection.  This has some degeneracy with `select_sphere`.
