--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -25,6 +25,8 @@ The final mechanism by which data is selected is for discrete data points, typic
 At present, this is done by first identifying which data files intersect with a given selector, then selecting individual points.
 There is no hierarchical data selection conducted in this system, as we do not yet allow for re-ordering of data on disk or in-memory which would facilitate hierarchical selection through the use of operations such as morton indices.
 
+### Selection Routines
+
 Given these set of hierarchical selection methods, all of which are designed to provide opportunities for early-termination, each *geometric* selector object is required to implement a small set of methods to expose its functionality to the hierarchical selection process.
 Duplicative functions often result from attempts to avoid expensive calculations that take into account boundry conditions such as periodicity and reflectivity unless necessary.
 Additionally, by providing some routines as options, we can in some instances specialize them for the specific geometric operation.
@@ -35,6 +37,51 @@ Additionally, by providing some routines as options, we can in some instances sp
  * `select_bbox(lower_left, upper_right)`: Determine overlap with an axis-aligned bounding box.  Particularly for hierarchical selection methods, determining whether or not a bounding box overlaps with a geometric selector can lead to early-termination of some selection operations.  
  * `select_bbox_edge(lower_left, upper_right)`: This is a special-case of the bounding box routine that provides information as to whether or not the *entire* bounding box is included or just a *partial* portion of the bounding box.
 
-To cover:
+### Fast and Slow Paths
 
- * boolean operators
+Given an ensemble of objects, the simplest way of testing for inclusion in a selector is to call the operation `select_cell` on each individual object.
+Where the objects are organized in a regular fashion, for instance a "grid" that contains many "cells," we can apply both "first pass" and "second pass" fast-path operations.
+The "first pass" checks whether or not the given ensemble of objects is included, and only iterates inward if there is partial or total inclusion.
+The "second pass" fast pass is specialized to both the organization of the objects *and* the selector itself, and is used to determine whether either only a specific (and well-defined) subset of the objects is included or the entirety of them.
+
+For instance, we can examine the specific case of selecting grid cells within a rectangular prism.
+When we select a "grid" of cells within a rectangular prism, we can have either total inclusion, partial inclusion, or full exclusion.
+In the case of full inclusion, where the entire grid is included within the selector, we simply sidestep the specific inclusion checks completely and return a full mask of cells to utilize.
+In the case of partial inclusion, we can often determine the "start" and "end" indices of inclusion in the rectangular prism by examining the intersection volume.
+This allows us to avoid many costly individual `select_cell` calls.
+
+With discrete point selection (and for our purposes, often unstructured mesh falls into this category) we often do not have the same organizing principle on which we can rely.
+However, utilizing hierarchical bitmap indexing we can often organize subsets of particles into collections of cells which may or may not be contiguous.
+In this situation, we can check for full inclusion within data objects, although we are not able to identify start and stop indices as the data are not assumed to be organized spatially independent of how we have indexed them.
+
+At present, the objects listed in @tbl:selection-objects are provided as selectors in yt.
+We do make a distinction between "selection" operations and "reduction" or "construction" operations (such as projections and smoothing/resampling), but have included both here for consistency.
+Additionally, some have been marked as not "user-facing," in the sense that they are not expected to be constructed directly by users, but instead are utilized internally for indexing purposes.
+In columns to the right, we provide information as to whether there is an available "fast" path for grid objects.
+
+| Object Name              | Object Type              |
+| ------------------------ | ------------------------ |
+| Arbitrary grid           | Resampling               |
+| Bool                     | Selection (Base Class)   |
+| Covering grid            | Resampling               |
+| Cut region               | Selection                |
+| Cutting                  | Selection                |
+| Data collection          | Selection                |
+| Disk                     | Selection                |
+| Ellipsoid                | Selection                |
+| Intersection             | Selection (Bool)         |
+| Octree                   | Internal index           |
+| Ortho ray                | Selection                |
+| Particle projection      | Reduction                |
+| Point                    | Selection                |
+| Quadtree projection      | Reduction                |
+| Ray                      | Selection                |
+| Region                   | Selection                |
+| Slice                    | Selection                |
+| Smoothed covering grid   | Resampling               |
+| Sphere                   | Selection                |
+| Streamline               | Selection                |
+| Surface                  | Selection                |
+| Union                    | Selection (Bool)         |
+
+Table: Selection objects and their types. {#tbl:selection-objects}
