Adding docstring parameters

--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -62,21 +62,21 @@ In columns to the right, we provide information as to whether there is an availa
 | Object Name              | Object Type              |
 | ------------------------ | ------------------------ |
 | Arbitrary grid           | Resampling               |
-| Bool                     | Selection (Base Class)   |
+| Boolean object           | Selection (Base Class)   |
 | Covering grid            | Resampling               |
 | Cut region               | Selection                |
-| Cutting                  | Selection                |
+| Cutting plane            | Selection                |
 | Data collection          | Selection                |
 | Disk                     | Selection                |
 | Ellipsoid                | Selection                |
 | Intersection             | Selection (Bool)         |
 | Octree                   | Internal index           |
-| Ortho ray                | Selection                |
+| Orthogonal ray           | Selection                |
 | Particle projection      | Reduction                |
 | Point                    | Selection                |
 | Quadtree projection      | Reduction                |
 | Ray                      | Selection                |
-| Region                   | Selection                |
+| Rectangular Prism        | Selection                |
 | Slice                    | Selection                |
 | Smoothed covering grid   | Resampling               |
 | Sphere                   | Selection                |
