--- a/scripts/selection_diagrams.ipynb
+++ b/scripts/selection_diagrams.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +52,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsing Hierarchy : 100%|██████████| 211/211 [00:00<00:00, 6182.83it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "s = ds.sphere(\"c\", 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e5ceb43b0fb45c0a34171ea67e8583e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.0, description='left_edge_x', max=1.0, step=0.01), FloatSlider(value…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@ipywidgets.interact(left_edge_x = cv, left_edge_y = cv, left_edge_z = cv,\n",
     "                     right_edge_x = cv, right_edge_y = cv, right_edge_z = cv)\n",
@@ -154,14 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c43a3daeffc4357a600ba11987314f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.5, description='center_x', max=1.0, step=0.01), FloatSlider(value=0.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "@ipywidgets.interact(center_x = (0.0, 1.0, 0.01),\n",
-    "                     center_y = (0.0, 1.0, 0.01),\n",
-    "                     center_z = (0.0, 1.0, 0.01),\n",
-    "                     radius = (0.0, 1.0, 0.01),\n",
+    "@ipywidgets.interact(center_x = cv, center_y = cv, center_z = cv, radius = cv,\n",
     "                    show_image = True)\n",
     "def make_sphere(center_x = 0.5, center_y = 0.5, center_z = 0.5,\n",
     "             radius = 0.15, show_image = True):\n",
@@ -171,10 +206,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthewturk/conda-py3/lib/python3.7/site-packages/ipykernel_launcher.py:8: RuntimeWarning: divide by zero encountered in log10\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "sp1 = ds.sphere(\"c\", 0.20)\n",
+    "sp1_svg = make_svg(sp1)\n",
+    "sp1_svg.saveSvg(\"../content/images/selectors/sp1.svg\")\n",
+    "\n",
+    "sp2 = ds.sphere((0.7, 0.7, 0.5), 0.25)\n",
+    "sp2_svg = make_svg(sp2)\n",
+    "sp2_svg.saveSvg(\"../content/images/selectors/sp2.svg\")\n",
+    "\n",
+    "dobj1 = sp1 + sp2\n",
+    "dobj1_svg = make_svg(dobj1)\n",
+    "dobj1_svg.saveSvg(\"../content/images/selectors/sp1_and_sp2.svg\")\n",
+    "\n",
+    "reg1 = ds.r[0.2:0.3,0.2:0.3,:]\n",
+    "reg1_svg = make_svg(reg1)\n",
+    "reg1_svg.saveSvg(\"../content/images/selectors/reg1.svg\")\n",
+    "\n",
+    "reg2 = ds.r[0.4:0.95, 0.4:0.95, 0.4:0.6]\n",
+    "reg2_svg = make_svg(reg2)\n",
+    "reg2_svg.saveSvg(\"../content/images/selectors/reg2.svg\")\n",
+    "\n",
+    "dobj2 = reg2 - sp2\n",
+    "dobj2_svg = make_svg(dobj2)\n",
+    "dobj2_svg.saveSvg(\"../content/images/selectors/reg2_not_sp2.svg\")"
+   ]
   }
  ],
  "metadata": {
