use python3 print function

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -20,7 +20,7 @@ YTArray([4.92e-31, 4.94e-31, 4.93e-31, ...,
 One of the nicest aspects of this new unit system is that the symbolic algebra for unitful operations is performed automatically by sympy:
 
 ```python
->>> print dd[`cell_mass']/dd[`cell_volume'] 
+>>> print(dd[`cell_mass']/dd[`cell_volume'])
   [4.92e-31 4.94e-31 4.93e-31 ... 
    1.12e-25 1.59e-25 1.09e-24] g/cm**3
 ```
@@ -33,7 +33,7 @@ For scalar data, we have created the new `YTQuantity` class.
 ```python
 >>> from yt.utilities.physical_constants import
         boltzmann_constant
->>> print dd[`temperature']*boltzmann_constant 
+>>> print(dd[`temperature']*boltzmann_constant)
 [ 1.28e-12 1.29e-12 1.29e-12 ... 
   1.63e-12 1.59e-12 1.40e-12] erg
 ```
@@ -49,11 +49,11 @@ Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit`, attribute tha
 ```python
 >>> import yt
 >>> ds = yt.load("Enzo_64/DD0043/data0043")
->>> print ds.length_unit 
+>>> print(ds.length_unit)
 128 Mpccm/h
->>> print ds.quan(1.0, "code_length").in_units("Mpccm/h")
+>>> print(ds.quan(1.0, "code_length").in_units("Mpccm/h"))
 128 Mpccm/h
->>> print ds.length_unit.in_cgs()
+>>> print(ds.length_unit.in_cgs())
 5.55517285026e+26 cm
 ```
 
@@ -70,10 +70,10 @@ To obtain on-disk data, a user need only query a data object using an on-disk fi
 >>> import yt
 >>> ds = yt.load("Enzo_64/DD0043/data0043")
 >>> dd = ds.all_data()
->>> print dd[('enzo', 'Density')] 
+>>> print(dd[('enzo', 'Density')])
 [ 6.74e-02 6.12e-02 8.92e-02 ... 
   9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
->>> print dd[('gas', 'density')] 
+>>> print(dd[('gas', 'density')])
 [ 1.92e-31 1.74e-31 2.54e-31 ... 
   2.59e-28 1.61e-28 1.22e-28] g/cm**3
 ```
@@ -192,15 +192,15 @@ True
 
 >>> from yt.units import kilometer 
 >>> three_kilometers = 3*kilometer 
->>> print three_kilometers 
+>>> print(three_kilometers)
 3.0 km
 
 >>> from yt.units import gram, kilogram 
->>> print gram+kilogram 
+>>> print(gram+kilogram)
 1001.0 g 
->>> print kilogram+gram 
+>>> print(kilogram+gram)
 1.001 kg 
->>> print kilogram/gram 
+>>> print(kilogram/gram)
 1000.0 dimensionless
 ```
 
@@ -233,17 +233,17 @@ The examples below illustrate the consistency of this choice:
 >>> import yt
 >>> ds1 = yt.load(`Enzo_64/DD0002/data0002')
 >>> ds2 = yt.load(`Enzo_64/DD0043/data0043')
->>> print ds1.length_unit, ds2.length_unit 
+>>> print(ds1.length_unit, ds2.length_unit)
 128 Mpccm/h, 128 Mpccm/h
->>> print ds1.length_unit.in_cgs()
+>>> print(ds1.length_unit.in_cgs())
 6.26145538088e+25 cm
->>> print ds2.length_unit.in_cgs() 
+>>> print(ds2.length_unit.in_cgs())
 5.55517285026e+26 cm 
 
 
->>> print ds1.length_unit*ds2.length_unit 
+>>> print(ds1.length_unit*ds2.length_unit)
 145359.100149 Mpccm**2
->>> print ds2.length_unit*ds1.length_unit 
+>>> print(ds2.length_unit*ds1.length_unit)
 1846.7055432 Mpccm**2
 ```
 
@@ -253,9 +253,9 @@ This convention is enforced for all binary operations on two `YTarray` objects.
 Results are always consistent when referencing an unambiguous physical coordinate system:
 
 ```python
->>> print (pf1.length_unit * pf2.length_unit).in_cgs() 
+>>> print((pf1.length_unit * pf2.length_unit).in_cgs())
 3.4783466935e+52 cm**2 
->>> print pf1.length_unit.in_cgs() * pf2.length_unit.in_cgs() 
+>>> print(pf1.length_unit.in_cgs() * pf2.length_unit.in_cgs())
 3.4783466935e+52 cm**2
 ```
 
